--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -14,8 +14,9 @@
                     <button class="btn-link tag-btn"><a href="#"> {{tag}}</a></button>
                     {% endfor %}
                 </div>
-
+                <!--<div class="post-header-buttom-divider">|</div>-->
             </div>
+            <div class="post-series">{{post.series}}</div>
         </div>
         <div class="post-body font-kai">
             {{post.body | safe}}
