--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
         <ul class="nav navbar-nav">
 
             <!-- archives 不使用下拉菜单-->
-            <li class="dropdown-toggle" data-toggle="dropdown"><a href="{{url_for('archives')}}">Archives</a>
+            <li><a href="{{url_for('archives')}}">Archives</a>
             </li>
             <!-- 系列-->
              <!--下拉菜单，通过系列查看文章 -->
