--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -107,6 +107,6 @@
 </ul>
 {% endif %}
 {% endwith %}
-<footer class="panel-footer">Copyright © 2016 Penguin's Blog · Powered by Bootstrap></footer>
+<footer class="panel-footer">Copyright © 2016 Penguin's Blog · Powered by Bootstrap</footer>
 </body>
 </html>
