调整index页面info显示效果

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="post-info">
         <div class="info-back">
-            <div class="post-info-body">{{post.info}}</div>
+            <div class="post-info-body">{{post.info|safe}}</div>
         </div>
     </div>
 </div>
