--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -259,10 +259,11 @@ body{
 .post-info{
     padding-top: 10px;
     padding-left: 2em;
-    color: #505050;
+    color: #7a7a7a;
     font-size: medium;
-    font-weight: 300;
+    font-weight: 500;
     letter-spacing: 1px;
+    line-height: 30px;
 }
 .info-back{
     background: rgba(226, 232, 239, 0.3);
