--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
             <!--下拉菜单，通过系列查看文章 -->
             <li class="dropdown-toggle" data-toggle="dropdown"><a href="{{url_for('archives')}}">Series<b class="caret"></b> </a>
                 <ul class="dropdown-menu">
-                    {% for ser in series %}
+                    {% for ser in g.series %}
                     <li><a href="{{url_for('archives',class = class)}}">{{ser[0]}}</a></li>
                     {% endfor %}
                     <li class="divider"></li>
@@ -89,7 +89,7 @@
             <div class="sidebar-tag-box">
                 <div class="sidebar-header">Tags</div>
                 <div class="sidebar-content">
-                    {% for tag in all_tags %}
+                    {% for tag in g.all_tags %}
                 <div class="sidebar-tag">
                     <a class="sidebar-tag-link" href="#">{{tag[0]}}</a>
                 </div>
