在comments表中添加post_id项，js监听邮件输入，倒序显示评论

--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -23,9 +23,36 @@
         </div>
     </div>
     <div class="comment-display">
-
+        {% for com in comments %}
+        {{com.content}}
+        {% endfor %}
     </div>
     <div class="post-comment">
+        <script language="JavaScript">
+            <!-- 检测浏览器类型是否为IE-->
+            if("\v"=="v") {
+                element.onpropertychange = checkEmail;
+            }else{
+                element.addEventListener("input",checkEmail,false);
+            }
+            function checkEmail() {
+                var email = document.getElementById("comment-email").value;
+                if (email != "") {
+                    var reg = /^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/;
+                    isok = reg.test(email);
+                    if (!isok) {
+//                        alert("邮箱格式不正确，请重新输入！");
+//                        document.getElementById("comment-email").focus();
+                        document.getElementById('email-error').innerHTML= '格式不正确';
+                        return false;
+                    }else{
+                        document.getElementById('email-error').innerHTML= '';
+                    }
+                }
+
+            }
+
+        </script>
         <form class="comment" role="form" action="" method="post">
             {{form.hidden_tag()}}
             <div class="comment-nickname">
@@ -34,8 +61,9 @@
             </div>
             <div class="comment-email">
                 <!--<input type="text" class="form-control" id="comment-email" placeholder="邮箱（仅博主可见）">-->
-                {{form.email(class = 'form-control', id = 'comment-email', placeholder = '邮箱（仅博主可见）')}}
-            </div>
+                {{form.email(class = 'form-control', id = 'comment-email', placeholder = '邮箱*（仅博主可见，您可在邮件中查看回复）',oninput = 'return checkEmail()')}}
+
+            </div><div id="email-error"></div>
             <!--<textarea class="form-control" rows="5" placeholder="写评论..."></textarea>-->
             {{form.comment(class = 'form-control', placeholder = '写评论...', rows = 5)}}
             <input type="submit" class="btn" id="submit-comment" value="提交评论"></input>
