--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -509,3 +509,7 @@ section.archives-row-even:hover{
     border: solid 1px #d9d9d9;
     resize: none;
 }
+#email-error{
+    display: inline-block;
+    color: red;
+}
