--- a/app/templates/archives.html
+++ b/app/templates/archives.html
@@ -7,9 +7,9 @@
     <div class="archives-header">
         <h1>Archives</h1>
         <div class="archives-order-by">
-            <button class="btn archives-order-time">按时间</button>
+            <button class="btn archives-order-time" id="order-by-time">按时间</button>
             <div class="post-header-buttom-divider">|</div>
-            <button class="btn archives-order-tag">按类别</button>
+            <button class="btn archives-order-tag" id="order-by-tag">按类别</button>
         </div>
     </div>
     <div class="archives-content">
