--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -304,7 +304,8 @@ body{
 
 .index-row{
     padding: 20px;
-    height: 350px;
+    min-height: 350px;
+    height: 100%;
     border-bottom: 1px solid lightgray;
 
 }
