--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
 
     <!-- 让markdown支持latex数学公式 -->
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+    <!--<script type=text/javascript src="{{url_for('static', filename='MathJax/MathJax.js') }}"></script>-->
 
     <link rel="stylesheet" href="{{url_for('static', filename='custom.css')}}" type="text/css"/>
     <!-- 测试js-->
